# dotfiles

./: .gitignore  README.md  install.sh  pyproject.toml
agents/.agents/: AGENTS.md
agents/.agents/skills/browser-playwright/: SKILL.md
agents/.agents/skills/coding/: SKILL.md
agents/.agents/skills/image-generation-gemini/: SKILL.md
agents/.agents/skills/web-ui-design/: SKILL.md
bash/: .bash_custom  .bash_custom.sh
claude/.claude/: CLAUDE.md
claude/.claude/skills/image-generation-gemini/: SKILL.md
claude/.claude/skills/web-ui-design/: SKILL.md
codex/.codex/: AGENTS.md
copilot/.copilot/: copilot-instructions.md
copilot/.copilot/skills/image-generation-gemini/: SKILL.md
gemini/.gemini/: GEMINI.md
gemini/.gemini/skills/image-generation-gemini/: SKILL.md
git/: .gitconfig
git/.config/git/: ignore
nskills/: README.md  pyproject.toml
nskills/src/cmd/: __init__.py  image_generation.py
nvim/.config/nvim/: init.lua  lazy-lock.json
nvim/.config/nvim/lua/plugins/: catppuccin.lua  cmp.lua  colorscheme.lua  gitsigns.lua  lsp.lua  nvim-tree.lua  telescope.lua  treesitter.lua
src/: cli.py
starship/.config/: starship.toml
tmux/: .tmux.conf
zed/.config/: sync.sh
zed/.config/zed/: keymap.json  settings.json
zsh/: .zsh_custom  .zsh_custom.sh
