[project]
name = "nskills"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.64.0",
    "typer>=0.24.1",
]

[project.scripts]
nskills = "src.cli:app"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
